// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Card 1`] = `
<div
  className=""
>
  🥑
</div>
`;

exports[`A raised Card 1`] = `
<div
  className="undefined"
>
  🥑
</div>
`;

exports[`A raised Card with a CardMedia block 1`] = `
<div
  className="undefined"
>
  <div
    className=""
    style={
      Object {
        "backgroundImage": "url(http://placekitten.com/200/300)",
      }
    }
  />
</div>
`;
